--- a/templates/form.html
+++ b/templates/form.html
@@ -16,7 +16,7 @@
           <div class="col-md-8">
             <form class="form-horizontal" method="post">
               <div class="form-group">
-                <label class="control-label col-xs-3" for="var_1">Number of study hours</label>
+                <label class="control-label col-xs-3" for="var_1">Enter study hours</label>
 
                 <div class="col-xs-7">
                   <input type="number" step="0.01" class="form-control" name="var_1" value={{entered_value1 }} placeholder="&nbsp;0&nbsp;">
